# noisy-apt

./: .gitignore  Dockerfile  build-docker.sh  pyproject.toml
scripts/: build_maestro_musdb_mixtures.py  fine_tuning.sh  mix_datasets.sh  transcribe_test_split.py
transkun/: Data.py  Evaluation.py  LayersTransformer.py  Layers_ablation.py  ModelTransformer.py  SyncBN.py  TrainUtil.py  Util.py  computeMetrics.py  createDatasetMaestro.py  crfMinimalExample.py  plotDeviation.py  train.py  transcribe.py
transkun/CRF/: NeuralSemiCRFInterval.py
